@startuml Proyecto 

class Password{
    password: str
    encrypt()
}

class User{
    username: str
    pass: Password
    points: int

    log_in()
    log_out() 
    earn_points()
    lose_points() 
    create_task()
    create_meeting()
    create_note()
    remove_task()
    remove_meeting()
    remove_note()
}

abstract class "Item"{
    description: str
    creation_date: date 
    relevance_level: int

    update()
    delete()
}

class Note{
    font: font 
    font_size: double
}

class Task{
    is_done: bool
    due_date: date
}

class Meeting{
    link: str
    meeting_date: date
    go_to_meeting()
}


Item <|-- Task
Item <|-- Meeting
Item <|-- Note

User *-- Task
User *--- Meeting
User *--- Note

User *- Password

@enduml